# ERCs

./: .gitattributes  .gitignore  .gitmodules  404.html  CNAME  CONTRIBUTORS.md  Cleanup _repos.sh  EIP-7777-Atomic Liquidity Booster.md  EIP-7777-SuperFuse.md  EIP-7777: SuperFuse — Atomic Liquidity Booster  EIPS  ERC-8041-Ethereum-Magicians-Post.md  Gemfile  LICENSE.md  README.md  _config.yml  backup-19-09-2024_05-01-18.1inch  collateralizedNFT.md  draft-erc-named-erc721  erc-0000.md  erc-7565.md  erc-7734.md  erc-7905.md  erc-7930.md  erc-7990.md  erc-7994.md  erc-7995.md  erc-8040.md  erc-8055.md  erc-8098.md  erc-8244.md  erc-8336.md  erc-9999.md  erc-draft-compressed-rpc-link-format.md  erc-draft_contract_hosted_app.md  erc-draft_opaque_token.md  erc-draft_perpetual-contrat-NFTs.md  erc-draft_protocol_control_disclosure_core.md  erc-template.md  erc-xx.md  (+8 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
assets/eip-7963/eip-permissioned-erc20/zk/: Cargo.toml  README.md  index.md
assets/eip-7963/eip-permissioned-erc20/zk/host/: Cargo.toml
assets/eip-7963/eip-permissioned-erc20/zk/methods/: Cargo.toml
assets/eip-7963/eip-permissioned-erc20/zk/methods/guest/: Cargo.toml
assets/eip-7963/eip-permissioned-erc20/zk/test-utils/benches/: proof_generation.rs
assets/eip-7963/eip-permissioned-erc20/zk/test-utils/examples/: integration_test_runner.rs  payment_instruction_demo.rs  phase2_cli.rs  phase3_cli.rs
assets/eip-7963/eip-permissioned-erc20/zk/test-utils/src/: crypto_utils.rs  integration.rs  lib.rs  merkle_tree.rs  mock_data.rs  payment_instruction_generator.rs  proof_validator.rs  test_helpers.rs
assets/eip-7963/eip-permissioned-erc20/zk/test-utils/tests/: guest_program_tests.rs  integration_tests.rs  phase3_integration_tests.rs
assets/erc-7963/eip-permissioned-erc20/zk/test-utils/: Cargo.toml
rss/: all.xml  (+2 more)
(+2344 files in other folders)
