[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
proptest = "1.0"
tempfile = "3.0"
anyhow = "1.0"
tracing-subscriber = "0.3"

# Integration testing dependencies
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "integration_test_runner"
path = "examples/integration_test_runner.rs"

[[bench]]
name = "proof_generation"
harness = false

[[bench]]
name = "verification"
harness = false 